--- a/utils-lib.csproj
+++ b/utils-lib.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Namotion.Reflection" Version="1.0.15" />
   </ItemGroup>
 
 </Project>
