--- a/utils-lib.csproj
+++ b/utils-lib.csproj
@@ -14,7 +14,9 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.8.3" />
     <PackageReference Include="Namotion.Reflection" Version="1.0.15" />
   </ItemGroup>
 
